--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <h4 id="dateBottom"
           class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-body-alt-color u-text-default u-text-2">
           Monday, March 14, 2022 </h4>
+        <h4 id="hijriDate"
+          class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-body-alt-color u-text-default u-text-3">
+          Al Thalaata,27 Rajab , 1443 </h4>
       </div>
     </div>
   </header>
@@ -227,11 +230,16 @@
 
       <!--Qibla Compass-->
       <div class=" u-shape u-shape-rectangle u-shape-1">
+        <h5 style="text-align: center;">Qibla Angle <span id="angle" style="color: rgb(251, 255, 1);">180</span>&#176;<span id="coordinate">S</span></h5>
         <div id="compass">
-          <span>N</span>
-          <span>E</span>
-          <span>S</span>
-          <span>W</span>
+          <span style="font-size:small;">N(0)</span>
+          <span style="font-size:small;">E(90)</span>
+          <span style="font-size:small;">S(180)</span>
+          <span style="font-size:small;">W(270)</span>
+          <span >45</span>
+          <span >315</span>
+          <span >135</span>
+          <span >225</span>
           <div id="pointer"></div>
         </div>
 
