--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   </section>
 
 
-  <footer id="footer">
+  <footer id="footer" style="display: none;">
     <div class="text">
       <marquee id="marquee">
         <span>**Call upon me, I will respond to you | Surah Ghafir 40:60</span>
