--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 
 <body >
-  <div class="loading" ></div>
+  <!-- <div class="loading" ></div> -->
 
 
 
@@ -261,6 +261,7 @@
         <label for="startCheck">Schedule By Location 👉
           <input type="checkbox" name="locatoin" id="locationCheck">
         </label>
+        <br>
 
         <label for="startCheck">Schedule By Mosques 👉
           <input type="checkbox" name="mosque" id="mosqueCheck">
