--- a/selectMosque/select.html
+++ b/selectMosque/select.html
@@ -43,7 +43,9 @@
          <div class="col-lg-1 col-md-1 col-xl-1 col-sm-2 first">
           <div class="main" >
             <span id="autoPlay">AdhanPlay(Off)</span>
+            <br>
             <i class="fa fa-play-circle" id="playButton"></i>
+            <i class="fa-solid fa-laptop-code" id="full"></i>
             <h4 id="main">Main</h4>
           </div>
          </div>
